[package]
name = "mush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.18"

# wgpu uses log for logging
log = "0.4"
env_logger = "0.10"
anyhow = "1.0.75"
pollster = "0.3.0"
bevy_ecs = { version = "0.12.1", features = ["multi-threaded"] }
bytemuck = { version = "1.14.0", features = ["nightly_stdsimd", "derive"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

